[ios] Fix settings switch accessibility value and hint.

BUG=671559

Review-Url: https://codereview.chromium.org/2625423003
Cr-Commit-Position: refs/heads/master@{#443524}

Former-commit-id: 29ab9e2ce5544edc156a4d7450c172fb517cb5f3